# eigcov

./: .gitignore  .gitmodules  README.md  README_v1.md  README_v2.md  pyproject.toml  requirements.txt
notebooks/: analysis-v2.ipynb  analysis.ipynb  archs.tx
old/results-2026-03-28/: log.txt  lora-arch.txt
old/results_tmp-2023-03-28/: analysis.ipynb  results.jsonl
results-olmo/allenai-Olmo-3-1025-7B-eigcov/: metrics-all.jsonl  metrics.json  task-000-codex_humaneval-metrics.json  task-001-codex_humanevalplus-metrics.json  task-002-ifeval-metrics.json  task-003-aime-metrics.json  task-004-aime-metrics.json
results-olmo/allenai-Olmo-3-1025-7B-experts/: metrics.json
results-olmo/allenai-Olmo-3-1025-7B-isoc/: metrics-all.jsonl  metrics.json  task-000-codex_humaneval-metrics.json  task-001-codex_humanevalplus-metrics.json  task-002-ifeval-metrics.json  task-003-aime-metrics.json  task-004-aime-metrics.json
results-olmo/allenai-Olmo-3-1025-7B-mean/: metrics-all.jsonl  metrics.json  task-000-codex_humaneval-metrics.json  task-001-codex_humanevalplus-metrics.json  task-002-ifeval-metrics.json  task-003-aime-metrics.json  task-004-aime-metrics.json
results-olmo/allenai-Olmo-3-1025-7B-regmean/: metrics-all.jsonl  metrics.json  task-000-codex_humaneval-metrics.json  task-001-codex_humanevalplus-metrics.json  task-002-ifeval-metrics.json  task-003-aime-metrics.json  (+1 more)
results-tracked/: eigcov_estimation_error_vision_n10_b32.csv  results-hpopt.jsonl  results-latency.jsonl  results.jsonl
results_tmp/: results.jsonl
scripts/: covariance.py  eval.sh  lang_eval.sh  lang_eval_covs.sh  lang_eval_hpo.sh  lang_eval_hpo_2.sh  lang_eval_merge_time.sh  lang_train.sh  lang_train_array.sh  make_bar_chart.py  make_bar_linear.py  make_bar_timing.py  make_table.py  migrate_hashes.py  scratch.py  train.sh  vision_covs.sh  vision_covs_nsamples.sh  vision_eval.sh  vision_eval_2.sh  vision_eval_covs.sh  vision_eval_hpo.sh  vision_eval_hpo_2.sh  vision_train.sh  vision_train_array.sh
scripts-old/: setup_uv.sh
scripts/nlg/: README.md  (+12 more)
src/: args.py  covariance.py  distributed.py  eval_task_addition.py  finetune.py  merging.py  merging_ties.py  mha.py  mhap.py  mhas.py  modeling.py  results_db.py  task_vectors.py  utils.py
tests/: test_e2e.sh
(+190 files in other folders)
